# rtsam

./: .gitignore  Cargo.toml  README.md
examples/: dummy.rs
src/: lib.rs
src/codegen/: mod.rs
src/core/: group.rs  manifold.rs  matrix.rs  mod.rs  transform.rs  vector.rs
src/geometry/: mod.rs  se3.rs  so3.rs
src/inference/: cluster_tree.rs  conditional.rs  factor.rs  factor_graph.rs  mod.rs
src/inference/expression/: factor_graph.rs  mod.rs
src/linear/: gaussian.rs  gaussian_factor_graph.rs  gaussian_like.rs  jacobian.rs  mod.rs  noise_model.rs
src/linear/noise_model/: diagonal.rs  gaussian.rs  isotropic.rs  mod.rs  unit.rs
src/nonlinear/: mod.rs
src/symbolic/: mod.rs
src/symbolic/types/: matrix.rs  mod.rs  symbol.rs
