[package]
name = "rtsam"
version = "0.1.3"
authors = ["Fan Jiang <i@fanjiang.me>"]
edition = "2018"
repository = "https://github.com/ProfFan/rtsam"
description = "Real Time Smoothing and Mapping (RTSAM) in Rust."
license = "MIT"

[dependencies]
nalgebra = "0.18.0"
typenum = "1.10.0"
alga = "0.9.0"
num = "0.2.0"
approx = "0.3.2"

[dev-dependencies]
finitediff = "0.1.1"