[package]
name = "rtsam"
version = "0.1.3"
authors = ["Fan Jiang <i@fanjiang.me>"]
edition = "2018"
repository = "https://github.com/ProfFan/rtsam"
description = "Real Time Smoothing and Mapping (RTSAM) in Rust."
license = "BSD-3-Clause"

[dependencies]
nalgebra = "0.18.0"
typenum = "1.10.0"
alga = "0.9.1"
num = "0.2.0"
approx = "0.3.2"
inkwell = { git = "https://github.com/TheDan64/inkwell.git", branch = "llvm8-0", optional = true }
llvm-sys = { version = "80.1.1", optional = true }

[dev-dependencies]
finitediff = "0.1.1"

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional. Note that `session` is not a package
# but rather another feature listed in this manifest.
default = []
codegen = ["inkwell", "llvm-sys"]