[package]
name = "rtsam"
version = "0.1.3"
authors = ["Fan Jiang <i@fanjiang.me>"]
edition = "2018"
repository = "https://github.com/ProfFan/rtsam"
description = "Real Time Smoothing and Mapping (RTSAM) in Rust."
license = "BSD-3-Clause"

[dependencies]
nalgebra = "*"
typenum = "1.14.0"
alga = "0.9.3"
num = "0.4.0"
approx = "0.5.0"
inkwell = { version = "0.1.0-beta4", optional = true }
llvm-sys = { version = "130.0.0", optional = true }

[dev-dependencies]
finitediff = "0.1.4"

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional. Note that `session` is not a package
# but rather another feature listed in this manifest.
default = []
codegen = ["inkwell", "llvm-sys"]